2011-01-25 Borut Razem <borut.razem AT siol.net>

	* src/SDCCsysytem.c: removed MSCV 2010 warnings

2011-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c:
	  Make argument to validateOpType non-const.

2011-01-17 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c: fixed bug introduced by me 2011-01-16
	* support/Util/dbuf.c, support/Util/dbuf.h, src/SDCCsystem.c:
	  dbuf_detach_c_str() returns char *, for compatiblity with
	  dbuf_detach()
	* configure.in, configure: fixed Solaris SunPro C compiler errors:
	  #error: "Use of <stdbool.h> is valid only in a c99 compilation environment."
	  by adding -xc99 option to CFLAGS and MAKEDEP

2011-01-16 Philipp Klaus Krause <pkk AT spth.de>

	* SDCClrange.h,
	  SDCClrange.c:
	  Comment on the effects of dead code on live ranges.

2011-01-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c:
	  Make argument to validateOpType const.

2011-01-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Two new peephole rules, optimizing code frequently generated by the new allocator.

2011-01-16 Borut Razem <borut.razem AT siol.net>

	* support/regression/collate-results.py: count invalid instructions
	* sim/ucsim/z80.src/inst_xxcb.cc (inst_XXcb_set): fixed SET and RES handling

2011-01-15 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c, src/SDCCdwarf2.c, src/SDCCdwarf2.h, src/z80/gen.c,
	  src/SDCCglobl.h, src/pic16/pcode.h, src/pic16/pcode.c,
	  src/SDCCsystem.c, src/SDCC.lex:
	  code cleaning: removed warnings, use const char *
	* src/pic14/glue.c (emitIvals): removed empty line generation 

2011-01-15 Philipp Klaus Krause <pkk AT spth.de>

	* SDCCglobl.h:
	  Use Maarten's better bool scheme.

2011-01-15 Philipp Klaus Krause <pkk AT spth.de>

	* configure,
	  configure.in,
	  src/Makefile.in,
	  Makefile.common.in,
	  src/port.mk,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCClrange.c,
	  src/z80/z80.h,
	  src/z80/main.c,