@@ -1,3 +1,12 @@
+2011-01-27 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/mcs51/gen.c (mova): added early optimization,
+	  (getFreePtr): simplified aopp to aop,	
+	  (aopPtrForSym): factored out of aopForSym,
+	  (freeAsmop,freeForBranchAsmop): fixed bug 3130806 for AOP_STK
+	* src/mcs51/gen.h (asmop): replaced aop_stk with aop_sym
+	* support/regression/tests/bug3130806.c: new, added
+
 2011-01-25 Borut Razem <borut.razem AT siol.net>
 
 	* src/SDCCsysytem.c: removed MSCV 2010 warnings
